# agentlint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  agentlint.yml  agentlint.yml.example  codecov.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  adapters.md  architecture.md  configuration.md  custom-rules.md  fintech-pack-spec.md  mcp.md  migration-v2.md  release-2.1.0.md  setup-claude.md  setup-codex.md  setup-continue.md  setup-cursor.md  setup-gemini.md  setup-generic.md  setup-grok.md  setup-kimi.md  setup-mcp.md  setup-openai.md  subagent-safety.md
docs/plans/: 2026-02-17-agentlint-design.md  2026-02-17-agentlint-implementation.md  2026-02-24-circuit-breaker-design.md  2026-02-24-circuit-breaker-implementation.md  2026-03-02-autopilot-safety-pack.md
plugin/: mcp.json  plugin.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: doctor.md  fix.md  security-audit.md
plugin/commands/: lint-config.md  lint-status.md
plugin/hooks/: hooks.json  post-tool-use.sh  pre-tool-use.sh  stop.sh
src/agentlint/: __init__.py  __main__.py  agents_md.py  circuit_breaker.py  cli.py  config.py  detector.py  engine.py  filters.py  mcp_server.py  models.py  recorder.py  reporter.py  session.py  setup.py  template.py
tests/: conftest.py  test_adapter_utils.py  test_agentchute_client.py  test_agentchute_feeds.py  test_agentchute_policy_queue_sync.py  test_agents_md.py  test_bash_utils.py  test_ci.py  test_circuit_breaker.py  test_cli.py  test_cli_integration.py  test_codex_adapter.py  test_config.py  test_continue_adapter.py  test_cursor_adapter.py  test_custom_rules.py  test_detector.py  test_engine.py  test_file_scope.py  test_filters.py  test_gemini_adapter.py  test_generic_adapter.py  test_git.py  test_git_utils_checkpoint.py  test_grok_adapter.py  test_integration.py  test_kimi_adapter.py  test_main_module.py  test_mcp_adapter.py  test_mcp_server.py  test_models.py  test_openai_adapter.py  test_packs_loader.py  test_paths_utils.py  test_quality_new_rules.py  test_recorder.py  test_reporter.py  test_rule_inventory.py  test_session.py  test_setup.py  (+1 more)
tests/packs/: test_autopilot_integration.py  test_autopilot_pack_loads.py  test_autopilot_post.py  test_autopilot_pre.py  test_cicd_pipeline_guard.py  test_cloud_infra_mutation.py  test_cloud_paid_resource_creation.py  test_cloud_resource_deletion.py  test_docker_volume_guard.py  test_edge_cases.py  test_env_credential_reference.py  test_frontend.py  test_git_checkpoint.py  test_network_firewall_guard.py  test_no_compromised_dependency.py  test_react.py  (+23 more)
(+125 files in other folders)
