[project]
name = "agentlint"
version = "0.1.0"
description = "Real-time quality guardrails for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "maupr92" }
]
keywords = ["claude-code", "ai-agents", "guardrails", "linting", "hooks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
agentlint = "agentlint.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentlint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
