[project]
name = "agentlint"
version = "0.1.1"
description = "Real-time quality guardrails for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "mauhpr" }
]
keywords = ["claude-code", "ai-agents", "guardrails", "linting", "hooks", "code-quality", "ai-safety", "agent-guardrails", "claude", "code-review", "pre-commit", "ai-linting", "ai-guardrails", "agentic", "tool-use", "ai-code-review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/mauhpr/agentlint"
Repository = "https://github.com/mauhpr/agentlint"
Issues = "https://github.com/mauhpr/agentlint/issues"
Changelog = "https://github.com/mauhpr/agentlint/blob/main/CHANGELOG.md"
Documentation = "https://github.com/mauhpr/agentlint/tree/main/docs"

[project.scripts]
agentlint = "agentlint.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentlint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
